--- a/tasks/task0/index.html
+++ b/tasks/task0/index.html
@@ -1,12 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Colour Wheel</title>
-  </head>
-  <body>
-    <h1>Hello World</h1>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Colour Wheel</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+
+<body>
+  <center>
+    <h1>The Color Chart</h1>
+  </center>
+  <br><br>
+  <center>
+    <h2>Primary Colors</h2>
+  </center>
+  <br>
+  <div class="red"></div>
+  <div class="blue"></div>
+  <div class="yellow"></div>
+  <br><br><br><br><br><br>
+  <center>
+    <h2>Secondary Colors</h2>
+  </center>
+  <br>
+  <div class="purple"></div>
+  <div class="green"></div>
+  <div class="orange"></div>
+  <br><br><br><br><br><br>
+  <center>
+    <h2>Color Wheel</h2> 
+  </center>
+  <br>
+  <center>
+    <img src="color-wheel.jpg" alt="Wheel">
+  </center>
+  
+</body>
+
 </html>
